# immo

./: .env  .gitignore  GesImmo.spec  GestionImmobiliere.spec  Guide_Installation_Application.txt  README.md  Structure.txt  app.py  etape.txt  immo.sql  lancer_application.bat  pyproject.toml  replit.md  requirements.txt  run_app.py  run_app.spec  seed_database.py  test.py
utils/: auth.py  database.py  reporting.py
utils/__pycache__/: reporting.cpython-313.pyc.1987441681424
