[project]
name = "real-estate-platform"
version = "1.0.0"
description = "Plateforme de gestion immobilière complète"
dependencies = [
    "streamlit>=1.28.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pillow>=10.0.0"
]

[tool.uv]
dev-dependencies = []